--- a/home.html
+++ b/home.html
@@ -36,7 +36,7 @@
               <a class="nav-link small text-white me-lg-5" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link small text-white me-lg-5" href="#">Contact</a>
+              <a class="nav-link small text-white me-lg-5" href="#latest">Latest</a>
             </li>
             <!-- <li class="nav-item">
               <a class="nav-link small text-white" href="#">Community</a>
@@ -47,8 +47,8 @@
                 <span class="small">Community</span>
               </button>
               <ul class="dropdown-menu " aria-labelledby="dropdownMenuButton2">
-                <li><a class="dropdown-item small" href="#">Facebook<i class="ms-2 text-primary fa-brands fa-facebook"></i></a></li>
-                <li><a class="dropdown-item small" href="#">Youtube<i class="ms-2 fa-brands fa-youtube text-danger"></i></a></li>
+                <li><a class="dropdown-item small" href="https://www.facebook.com/yukimei9311">Facebook<i class="ms-2 text-primary fa-brands fa-facebook"></i></a></li>
+                <li><a class="dropdown-item small" href="https://www.youtube.com/channel/UCnH7yq4YlSABc27a-4fqdng/featured">Youtube<i class="ms-2 fa-brands fa-youtube text-danger"></i></a></li>
               </ul>
             </div>
           </ul>
@@ -108,7 +108,7 @@
       
   </div>
 
-  <div class="latest my-5">
+  <div class="latest my-5" id="latest">
     <div class="text-center mt-5">
       <p class="text-white px-5 py-2 fw-bold bg-dark d-inline-block mt-lg-5">Latest Post</p>
     </div>
