--- a/home.html
+++ b/home.html
@@ -178,7 +178,7 @@
           </p>
        </div>
 
-       <div class=" animate__animated animate__fadeInUp wow">
+       <div class=" animate__animated animate__fadeInUp wow mb-5">
           <h5 class="card-title text-decoration-underline">Social Platform ><</h5>
           <p class="card-text">
             This is our social platform. <br> Follow us to get update videos ! 
