--- a/home.html
+++ b/home.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6470023168112492" crossorigin="anonymous"></script>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -57,6 +58,10 @@
     </nav>
   </div>
 
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6470023168112492"
+     crossorigin="anonymous">
+  </script>
+
   <div class="main-img">
     <div class="d-lg-flex justify-content-center">
       <div>
@@ -108,6 +113,10 @@
       
   </div>
 
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6470023168112492"
+     crossorigin="anonymous">
+  </script>
+
   <div class="latest my-5" id="latest">
     <div class="text-center mt-5">
       <p class="text-white px-5 py-2 fw-bold bg-dark d-inline-block mt-lg-5">Latest Post</p>
@@ -148,7 +157,10 @@
     </div>
       
   </div>
-  
+
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6470023168112492"
+     crossorigin="anonymous">
+  </script>
   <!-- About -->
   <div class="text-center mt-lg-5 mb-4" id="about">
     <p class=" px-5 py-2 fw-bold bg-primary text-white d-inline-block my-lg-5">About Us</p>
